fix(fuselage): Pinned Attachment Message White space fix

--- a/packages/fuselage/src/components/Message/Messages.styles.scss
+++ b/packages/fuselage/src/components/Message/Messages.styles.scss
@@ -251,4 +251,8 @@ $message-background-color-highlight: functions.theme(
       @include size.square(lengths.size(44));
     }
   }
+
+  &-attachment {
+    white-space: normal;
+  }
 }
